--- a/TODO
+++ b/TODO
@@ -1,11 +1,16 @@
+0.3.7
+* Add scope for RoleModel's #has_only_roles? method.
+* Add UserModel#ability convenience method.
 0.4.0
-* Make the Ability user referece configureable in Ability.
-* Test the generators.
+* Make framework agnostic.
+* Split the test suite so Rails is only required for Rails integration.
 * Test the railtie (currently implicity tested in dummy app).
 * Add upgrade generator to move the now deprecated definitions to the new syntax.
 * Remove old definition syntax and therefore deprecations.
 * Remove ActiveSupport runtime dependency (which is just used for deprecation warnings).
 0.5.0
 * Expand the generated tests to produce all the standard abilities: index,show,read,new,create,edit,update,destroy.
+* Test the generators.
 * Add test unit generator.
 * Add install generator to allow overriding of the default tests.
+* Make the Ability user referece configureable in Ability.
