--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,28 @@
 = Canard
 == Overview
-Canard brings CanCan and RoleModel together to make role based authorization in Rails easy. Your ability 
-definitions gain their own folder and a little structure. The easiest way to get started is with the 
+Canard brings CanCan and RoleModel together to make role based authorization in Rails easy. Your ability
+definitions gain their own folder and a little structure. The easiest way to get started is with the
 Canard generator. Canard progressively enhances the abilities of the model by applying role abilities on
 top of the models base abilities.
 
 A User model with :admin and :manger roles would be defined:
 
     class User < ActiveRecord::Base
-    
+
       acts_as_user :roles =>  :manager, :admin
-      
+
     end
-    
+
 If a User has both the :manager and :admin roles Canard will apply the abilities in the following order.
 First it will look for a users abilities, then it will look for the roles in the order they are defined e.g.
 
     app/abilities/users.rb
     app/abilities/manager.rb
     app/abilities/admin.rb
-    
-Therefore each the later abilities only need to build on their predecessors. 
 
-== Usage 
+Therefore each the later abilities only need to build on their predecessors.
+
+== Usage
 To generate some abilities for the User.
 
     $ rails g canard:ability user can:[read,create]:[account,statement] cannot:destroy:account
@@ -40,13 +40,13 @@ Generates an ability folder in Rails root and an associated spec;
 The resulting app/abilities/users.rb will look something like this;
 
     Canard::Abilities.for(:user) do
-    
+
       can     [:read, :create], Account
       cannot  [:destroy], Account
       can     [:read, :create], Statement
-    
+
     end
-    
+
 And it's associated test spec/abilities/users_spec.rb;
 
     require_relative '../spec_helper'
@@ -99,10 +99,10 @@ loading the ability for the User model and then apply the abilities for each rol
 If there is no user (i.e. logged out) Canard creates a guest and looks for a guest ability to apply so:
 
     $ rails g canard:ability guest can:create:user
-    
+
 Would generate an ability for a not logged in user to signup.
 
-Obviously the generators are just a starting point and should  be used only to get you going. I strongly 
+Obviously the generators are just a starting point and should  be used only to get you going. I strongly
 suggest that every new model you create you add to the abilities as the specs are easy to write and CanCan
 definitions are very clear and simple.
 
@@ -133,8 +133,48 @@ That's it!
 
 === Rails 2.x
 
-Sorry you are out of luck with Rails 2.x Canard has only been written and tested with Rails 3.x. I'll be happy 
+Sorry you are out of luck with Rails 2.x Canard has only been written and tested with Rails 3.x. I'll be happy
 to accept pull requests for tested Rails 2.x updates if anybody is game.
+
+== Supported ORM's
+
+Canard is ORM agnostic. ActiveRecord and Mongoid (thanks David Butler) adapters are currently implemented.
+New adapters can easily be added, but you'd need to check CanCan can also support your adapter.
+
+=== Further reading
+
+Canard stands on the sholders of Ryan Bates' CanCan and Martin Rehfeld's RoleModel. You can read more
+about defining abilities on the CanCan wiki (https://github.com/ryanb/cancan/wiki). Canard implements
+the Ability class for you so you don't need the boilerplate code from Ryan's example;
+
+    class Ability
+      include CanCan::Ability
+
+      def initialize(user)
+        user ||= User.new # guest user (not logged in)
+        if user.admin?
+          can :manage, :all
+        else
+          can :read, :all
+        end
+      end
+    end
+
+The Canard equivalent for non admins would be;
+
+    Canard::Abilities.for(:user) do
+      can :read, :all
+    end
+
+And for Admins;
+
+    Canard::Abilities.for(:admin) do
+      can :manage, :all
+    end
+
+Under the covers Canard uses RoleModel (https://github.com/martinrehfeld/role_model) to define roles. RoleModel
+is based on Ryan Bates' suggested approach to role based authorization which is documented in the CanCan
+wiki (https://github.com/ryanb/cancan/wiki/role-based-authorization).
 
 == Note on Patches/Pull Request
 
@@ -152,10 +192,11 @@ to accept pull requests for tested Rails 2.x updates if anybody is game.
 * James McCarthy
 * Joey Geiger
 * Morton Jonuschat
+* David Butler
 
 == Credits
 
-Thanks to Ryan Bates for creating the awesome CanCan (http://wiki.github.com/ryanb/cancan) 
+Thanks to Ryan Bates for creating the awesome CanCan (http://wiki.github.com/ryanb/cancan)
 and Martin Rehfeld for implementing Role Based Authorization in the form of RoleModel (http://github.com/martinrehfeld/role_model).
 
 == Copyright
