Minor mistake in doc for multiple roles definition
Minor mistake in documentation for acts_as_user with multiple roles. Now it says:

```ruby
acts_as_user :roles =>   :manager, :admin
```

while it should specify multiple roles as an array:

```ruby
acts_as_user :roles => [ :manager, :admin ]
```

--- a/README.rdoc
+++ b/README.rdoc
@@ -9,7 +9,7 @@ A User model with :admin and :manager roles would be defined:
 
     class User < ActiveRecord::Base
 
-      acts_as_user :roles =>  :manager, :admin
+      acts_as_user :roles => [ :manager, :admin ]
 
     end
 
